--- a/lec 09/robot/style.css
+++ b/lec 09/robot/style.css
@@ -4,6 +4,8 @@ h1 {
 }
 
 .robots {
+    display: flex;
+    justify-content: center;
 }
 
 .head,
@@ -21,10 +23,13 @@ h1 {
     height: 150px;
     border-radius: 200px 200px 0 0;
     margin-bottom: 10px;
+    display: flex;
+    align-content: center;
 }
 
 .eyes {
-
+    display: flex;
+    align-content: center;
 }
 
 .head:hover {
@@ -36,12 +41,15 @@ h1 {
     width: 300px;
     height: 150px;
     display: flex;
-}
+    justify-content: center;}
 
 .left_arm, .right_arm {
     width: 40px;
     height: 125px;
     border-radius: 100px;
+    display: flex;
+    align-content: flex-end;
+
 }
 
 .left_arm {
@@ -63,6 +71,9 @@ h1 {
     height: 200px;
     /* This is another useful property. Hmm what do you think it does?*/
     margin: 0 auto;
+    display: flex;
+    align-content: baseline;
+
 
 }
 
@@ -70,6 +81,7 @@ h1 {
     width: 40px;
     height: 120px;
     border-radius: 0 0 100px 100px;
+
 }
 
 .left_leg {
@@ -86,6 +98,8 @@ h1 {
 
 .right_leg {
     margin-left: 30px;
+    display: flex;
+    align-content: center;
 }
 
 .left_eye, .right_eye {
